--- a/public/notes.html
+++ b/public/notes.html
@@ -28,18 +28,22 @@
     </nav>
     <div class="container-fluid">
       <div class="row">
+        <!-- WHERE SAVED NOTE TITLES WILL BE STORED -->
         <div class="col-4 list-container">
           <div class="card">
             <ul class="list-group"></ul>
           </div>
         </div>
+        <!-- WHERE NOTES WILL BE LIVE/ACTIVE -->
         <div class="col-8">
+          <!-- DYNAMICALLY UPDATE THE TITLE (PLACEHOLDER) -->
           <input
             class="note-title"
             placeholder="Note Title"
             maxlength="28"
             type="text"
           />
+          <!-- DYNAMICALLY UPDATE THE TEXT (PLACEHOLDER) -->
           <textarea class="note-textarea" placeholder="Note Text"></textarea>
         </div>
       </div>
